--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     -->
     <link rel="shortcut icon" href="./assets/image/logo.ico" type="image/x-icon">
 
-    <link href="./assets/css/Style.css" rel="stylesheet" />
+    <link href="./assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
