--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                  and these projects include  :
                                 <br>Special projects for the Dar Al-Iftaa: management and governance system. Personnel Affairs. Mechanization. Fatwas.
                                 <br>General Secretariat: External debt management.
-                                <br> Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
+                                <br>  Skills: ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
                             </p>
 
                         </li>
@@ -515,8 +515,6 @@
 
                     <ol class="timeline-list">
 
-                      
-                       
                         <li class="timeline-item">
 
                             <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
