--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdo Mohamed - Personal Portfolio</title>
-
-    <!--
-      - favicon
-    -->
-    <link rel="shortcut icon" href="./assets/image/logo.ico" type="image/x-icon">
+    <title>Full Stack .NET Developer | Abdo Mohamed Portfolio</title>
 
     <link href="./assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!-- Seo -->
+    <link rel="shortcut icon" href="./assets/image/logo.ico" type="image/x-icon">
+    <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
+    <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development, Azure, JavaScript, SQL, Portfolio">
+    <meta property="og:image" content="./assets/image/Abdo.jpeg">
+    <meta name="author" content="Abdo Mohamed">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
-                    <img src="./assets/image/WhatsAppImage2.jpeg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
+                    <img src="./assets/image/Abdo.jpg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
                 </figure>
                 <div class="info-content">
                     <h1 class="name" title="Abdo Mohamed">Abdo Mohamed</h1>
@@ -136,10 +137,6 @@
 
         </aside>
 
-
-
-
-
         <!--
           - #main-content
         -->
@@ -165,11 +162,6 @@
                     <li class="navbar-item">
                         <button class="navbar-link" data-nav-link>Portfolio</button>
                     </li>
-
-                    <!--<li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Blog</button>
-                    </li>-->
-
                     <li class="navbar-item">
                         <button class="navbar-link" data-nav-link>Contact</button>
                     </li>
@@ -198,25 +190,23 @@
                     </p>
 
                     <p>
-                        <br>• Professional Experience in .Net Framework.
-                        </br>
+                        • Professional Experience in .Net Framework.
+                        <br>
                         • Working knowledge with Visual Studio, C#, SQL Server, RESTful APIs, and MVC.
+                     
                         <br>
                         • Working experience with third-party libraries, Payment Gateway like Stipe, and APIs.
                         <br>
                         • Familiar with JIRA, Git (GitHub, Bitbucket, GitLab).
-                        </br>
+                        <br>
                         • Solid understanding of the full web app development life cycle.
                         <br>
                         • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
                         presentable and in perfect working order.
-
                         <br>
                         • Identify and correct bugs. Maintain quality and ensure responsiveness of applications.
-
                         <br>
                         • Proofreading app code and correcting mistakes before each app is released.
-
                         <br>
                         • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
                         presentable and in perfect working order.
@@ -224,7 +214,7 @@
                         • Identify and correct bugs.
                         <br>
                         • Maintain quality and ensure responsiveness of applications.
-                        </br>
+                        <br>
                     </p>
                 </section>
 
@@ -379,47 +369,6 @@
 
                 </div>
 
-
-                <!--
-                  - clients
-                -->
-
-                <section class="clients">
-
-                    <h3 class="h3 clients-title">Clients</h3>
-
-                    <ul class="clients-list has-scrollbar">
-                        <li class="clients-item">
-                            <a href="#">
-                                <img height="100" src="./assets/image/Logo_1.jpg" alt="client logo">
-                            </a>
-                        </li>
-                        <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/image/Logo_2.png" alt="client logo">
-                            </a>
-                        </li>
-
-                        <li class="clients-item">
-                            <a href="#">
-                                <img src="./assets/image/Logo_3.png" alt="client logo">
-                            </a>
-                        </li>
-
-                        <li class="clients-item">
-                            <a href="#">
-                                <img height="100" src="./assets/image/Logo_4.png" alt="client logo">
-                            </a>
-                        </li>
-
-                      <!--  <li class="clients-item">
-                            <a href="#">
-                                <img height="100" src="./assets/image/Client-JoeKey.png" alt="client logo">
-                            </a>
-                        </li>
-                    -->
-                    </ul>
-                </section>
             </article>
             <!--
               - #RESUME
