--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Seo -->
-    <link rel="shortcut icon" href="./assets/image/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
     <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
     <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development, Azure, JavaScript, SQL, Portfolio">
     <meta property="og:image" content="./assets/image/Abdo.jpeg">
