--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack .NET Developer | Abdo Mohamed Portfolio</title>
+    <title>Full Stack .NET Developer | Abdo Mohamed </title>
 
     <link href="./assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Seo -->
+    <meta property="og:site_name" content="Full Stack .NET Developer | Abdo Mohamed" />
+    <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
     <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
     <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development, Azure, JavaScript, SQL, Portfolio">
-    <meta property="og:image" content="./assets/image/Abdo.jpeg">
+    <meta property="og:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
     <meta name="author" content="Abdo Mohamed">
+    <meta name="twitter:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg" />
+
 </head>
 
 <body>
