--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Seo -->
-    <meta property="og:site_name" content="Full Stack .NET Developer | Abdo Mohamed" />
-    <meta property="og:type" content="website" />
-    <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
+    <meta name="author" content="Abdo Mohamed">
     <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
     <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development, Azure, JavaScript, SQL, Portfolio">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Full Stack .NET Developer | Abdo Mohamed">
+    <meta property="og:title" content="Full Stack .NET Developer | Abdo Mohamed">
+    <meta property="og:description" content="Explore the portfolio of Abdo Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
     <meta property="og:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
-    <meta name="author" content="Abdo Mohamed">
-    <meta name="twitter:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg" />
+    <meta property="og:url" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/">
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Full Stack .NET Developer | Abdo Mohamed">
+    <meta name="twitter:description" content="Explore the portfolio of Abdo Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
+    <meta name="twitter:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
+
 
 </head>
 
