--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack .NET Developer | Abdo Mohamed </title>
+    <title> Front-end Developer | Abdelmaboud Mohamed </title>
 
     <link href="./assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <!-- Seo -->
     <meta name="author" content="Abdo Mohamed">
     <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
-    <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development, Azure, JavaScript, SQL, Portfolio">
+    <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development,  Front-end Developer  ,Azure, JavaScript, SQL, Portfolio">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Full Stack .NET Developer | Abdo Mohamed">
@@ -24,7 +24,7 @@
     <meta property="og:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
     <meta property="og:url" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/">
     <!-- Twitter -->
-    <meta name="twitter:title" content="Full Stack .NET Developer | Abdo Mohamed">
+    <meta name="twitter:title" content="Front-end Developer  | Abdo Mohamed">
     <meta name="twitter:description" content="Explore the portfolio of Abdo Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
     <meta name="twitter:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
     <!-- Favicon -->
@@ -43,8 +43,8 @@
                     <img src="./assets/image/Abdo.jpg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
                 </figure>
                 <div class="info-content">
-                    <h1 class="name" title="Abdo Mohamed">Abdo Mohamed</h1>
-                    <p class="title">Full Stack .Net Developer</p>
+                    <h1 class="name" title="Abdo Mohamed">Abdelmaboud </h1>
+                    <p class="title">Front-end Developer </p>
                 </div>
 
                 <button class="info_more-btn" data-sidebar-btn>
@@ -199,35 +199,37 @@
 
                 <section class="about-text">
                     <p>
-                        I am Abdelmaboud , a highly motivated and dedicated full stack developer with a strong background in web development and a specialization in .NET framework. With a Bachelor's degree in Computer science from Modern Academy, I possess a solid foundation in both business and technology. With two years of experience in the web development field, I have successfully delivered high-quality projects, showcasing my proficiency in front-end and backend development using technologies like HTML, CSS, JavaScript, and frameworks such as ASP.NET and MVC.
+                        In my role, I contribute significantly to developing project roadmaps and strategies by proposing new ideas and features,
+                        delivering proofs of concept, and documenting code for innovative products that meet customer needs. I work collaboratively
+                        with others to create, implement, test, and maintain software systems. My technical skills include expertise in the Angular
+                        JavaScript framework, and I have a strong interest in UI/UX development. Furthermore, I have functional knowledge across
+                        the application stack, including user interface, middle tier, and database systems
                     </p>
 
                     <p>
-                        • Professional Experience in .Net Framework.
+
                         <br>
-                        • Working knowledge with Visual Studio, C#, SQL Server, RESTful APIs, and MVC.
-                     
+                        • Experiencedin creating designs using adaptive and responsive design techniques.
                         <br>
-                        • Working experience with third-party libraries, Payment Gateway like Stipe, and APIs.
+                        • Capableofworking independently or as part of a team based on job requirements.
                         <br>
-                        • Familiar with JIRA, Git (GitHub, Bitbucket, GitLab).
+                        • Demonstratesaquick learning ability for new technologies and advanced research abilities.
                         <br>
-                        • Solid understanding of the full web app development life cycle.
+                        • Abletoworkonmultiple projects that utilize different technologies simultaneously.
                         <br>
-                        • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
-                        presentable and in perfect working order.
+                        • Proficient in utilizing ChatGPT, an advanced language model powered by OpenAI, to enhance productivity and
                         <br>
-                        • Identify and correct bugs. Maintain quality and ensure responsiveness of applications.
+                        • expedite task completion.
                         <br>
-                        • Proofreading app code and correcting mistakes before each app is released.
+                        • Strongcollaboration and communication skills.
                         <br>
-                        • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
-                        presentable and in perfect working order.
+                        • Excellent problem-solving and analytical thinking abilities.
                         <br>
-                        • Identify and correct bugs.
+                        • Highlyorganized and efficient, with strong time management skills.
                         <br>
-                        • Maintain quality and ensure responsiveness of applications.
+                        • Positive attitude and strong work ethic.
                         <br>
+                        • Adaptableandself-motivated, able to work independently or as part of a team
                     </p>
                 </section>
 
@@ -469,7 +471,7 @@
                     </div>
 
                     <ol class="timeline-list">
-                       
+
                         <li class="timeline-item">
 
                             <h4 class="h4 timeline-item-title">Azure Open Ai</h4>
@@ -804,23 +806,7 @@
 
                             </a>
                         </li>
-                        <li class="project-item  active" data-filter-item data-category="web development">
-                            <a href="http://www.fatwaacademy.org/">
 
-                                <figure class="project-img">
-                                    <div class="project-item-icon-box">
-                                        <ion-icon name="eye-outline"></ion-icon>
-                                    </div>
-
-                                    <img src="./assets/image/Project_5.jpg" alt="orizon" loading="lazy">
-                                </figure>
-
-                                <h3 class="project-title">Fatwaacademy</h3>
-
-                                <p class="project-category">Web development</p>
-
-                            </a>
-                        </li>
                         <li class="project-item  active" data-filter-item data-category="mobile development">
                             <a href="https://play.google.com/store/apps/details?id=com.dareleftaa.Events&hl=en_US">
 
@@ -872,23 +858,7 @@
 
                             </a>
                         </li>
-                        <li class="project-item  active" data-filter-item data-category="web development">
-                            <a href="https://www.believecasuals.com/ar/">
 
-                                <figure class="project-img">
-                                    <div class="project-item-icon-box">
-                                        <ion-icon name="eye-outline"></ion-icon>
-                                    </div>
-
-                                    <img src="./assets/image/Project_7.jpg" alt="orizon" loading="lazy">
-                                </figure>
-
-                                <h3 class="project-title">Beleive</h3>
-
-                                <p class="project-category">Web Development</p>
-
-                            </a>
-                        </li>
                         <li class="project-item  active" data-filter-item data-category="web development">
                             <a href="javascript:;">
 
@@ -900,6 +870,22 @@
                                 </figure>
 
                                 <h3 class="project-title">Impact</h3>
+
+                                <p class="project-category">Web development</p>
+
+                            </a>
+                        </li>
+                        <li class="project-item  active" data-filter-item data-category="web development">
+                            <a href="javascript:;">
+
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/image/freelancer.jpg" alt="freelancer" loading="lazy">
+                                </figure>
+
+                                <h3 class="project-title">freelancer</h3>
 
                                 <p class="project-category">Web development</p>
 
