save all last all

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Front-end Developer | Abdelmaboud Mohamed </title>
+    <title> Full Stack Developer | Abdelmaboud Mohamed </title>
 
     <link href="./assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,8 +43,8 @@
                     <img src="./assets/image/Abdo.jpg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
                 </figure>
                 <div class="info-content">
-                    <h1 class="name" title="Abdo Mohamed">Abdelmaboud </h1>
-                    <p class="title">Front-end Developer </p>
+                    <h1 class="name" title="Abdo Mohamed">Abdo Mohamed </h1>
+                    <p class="title">Full Stack .Net Developer </p>
                 </div>
 
                 <button class="info_more-btn" data-sidebar-btn>
@@ -183,10 +183,6 @@
 
             </nav>
 
-
-
-
-
             <!--
               - #ABOUT
             -->
@@ -196,47 +192,43 @@
                 <header>
                     <h2 class="h2 article-title">About me</h2>
                 </header>
-
                 <section class="about-text">
                     <p>
-                        In my role, I contribute significantly to developing project roadmaps and strategies by proposing new ideas and features,
-                        delivering proofs of concept, and documenting code for innovative products that meet customer needs. I work collaboratively
-                        with others to create, implement, test, and maintain software systems. My technical skills include expertise in the Angular
-                        JavaScript framework, and I have a strong interest in UI/UX development. Furthermore, I have functional knowledge across
-                        the application stack, including user interface, middle tier, and database systems
+                        I am Abdelmaboud , a highly motivated and dedicated full stack developer with a strong background in web development and a specialization in .NET framework. With a Bachelor's degree in Computer science from Modern Academy, I possess a solid foundation in both business and technology. With two years of experience in the web development field, I have successfully delivered high-quality projects, showcasing my proficiency in front-end and backend development using technologies like HTML, CSS, JavaScript, and frameworks such as ASP.NET and MVC.
                     </p>
 
                     <p>
+                        <br>• Professional Experience in .Net Framework.
+                        <br>
+                        • Working knowledge with Visual Studio, C#, SQL Server, RESTful APIs, and MVC.
+                        <br>
+                        • Working experience with third-party libraries, Payment Gateway like Stipe, and APIs.
+                        <br>
+                        • Solid understanding of the full web app development life cycle.
+                        <br>
+                        • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
+                        presentable and in perfect working order.
 
                         <br>
-                        • Experiencedin creating designs using adaptive and responsive design techniques.
+                        • Identify and correct bugs. Maintain quality and ensure responsiveness of applications.
+
                         <br>
-                        • Capableofworking independently or as part of a team based on job requirements.
+                        • Proofreading app code and correcting mistakes before each app is released.
+
                         <br>
-                        • Demonstratesaquick learning ability for new technologies and advanced research abilities.
+                        • Collaborating with UI and UX Designers, as well as Software Testers, to ensure that each app is
+                        presentable and in perfect working order.
                         <br>
-                        • Abletoworkonmultiple projects that utilize different technologies simultaneously.
+                        • Identify and correct bugs.
                         <br>
-                        • Proficient in utilizing ChatGPT, an advanced language model powered by OpenAI, to enhance productivity and
+                        • Maintain quality and ensure responsiveness of applications.
                         <br>
-                        • expedite task completion.
-                        <br>
-                        • Strongcollaboration and communication skills.
-                        <br>
-                        • Excellent problem-solving and analytical thinking abilities.
-                        <br>
-                        • Highlyorganized and efficient, with strong time management skills.
-                        <br>
-                        • Positive attitude and strong work ethic.
-                        <br>
-                        • Adaptableandself-motivated, able to work independently or as part of a team
                     </p>
                 </section>
 
-
                 <!--
-                  - service
-                -->
+      - service
+    -->
 
                 <section class="service">
 
@@ -310,8 +302,8 @@
 
 
                 <!--
-                  - testimonials
-                -->
+      - testimonials
+    -->
 
                 <section class="testimonials">
 
@@ -344,8 +336,8 @@
 
 
                 <!--
-                  - testimonials modal
-                -->
+      - testimonials modal
+    -->
 
                 <div class="modal-container" data-modal-container>
 
@@ -824,6 +816,23 @@
 
                             </a>
                         </li>
+                        <li class="project-item  active" data-filter-item data-category="mobile development">
+                            <a href="https://play.google.com/store/apps/details?id=com.clicksegypt.qurankareem&hl=ar&pli=1">
+
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+
+                                    <img src="./assets/image/united.jpg" alt="orizon" loading="lazy">
+                                </figure>
+
+                                <h3 class="project-title">مصر قرأن كريم</h3>
+
+                                <p class="project-category">Mobile Development</p>
+
+                            </a>
+                        </li>
                         <li class="project-item  active" data-filter-item data-category="web development">
                             <a href="#">
 
@@ -908,6 +917,38 @@
                             </a>
                         </li>
                         <li class="project-item  active" data-filter-item data-category="web development">
+                            <a href="javascript:;">
+
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/image/verifyfatwa.jpg" alt="verifyfatwa" loading="lazy">
+                                </figure>
+
+                                <h3 class="project-title">VerifyFatwa</h3>
+
+                                <p class="project-category">Web development</p>
+
+                            </a>
+                        </li>
+                        <li class="project-item  active" data-filter-item data-category="web development">
+                            <a href="javascript:;">
+
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/image/dashboard.png" alt="dashboard" loading="lazy">
+                                </figure>
+
+                                <h3 class="project-title">DashBoard - Events</h3>
+
+                                <p class="project-category">Web development</p>
+
+                            </a>
+                        </li>
+                        <li class="project-item  active" data-filter-item data-category="web development">
                             <a href="http://nazirayad.com/">
 
                                 <figure class="project-img">
@@ -923,6 +964,7 @@
 
                             </a>
                         </li>
+
 
 
                     </ul>
